--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "rootDir": "src",
     "target": "es2019",
+    "lib": ["dom", "es2019"],
     "jsx": "react",
     "sourceMap": true,
     "strict": true,
