--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "parcel ./src/index.html"
   },
   "dependencies": {
+    "formik": "^2.0.6",
     "less": "^3.10.3",
+    "overmind": "^20.0.0",
+    "overmind-react": "^21.0.0",
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-static-files-copy": "^2.2.1",
     "react": "^16.11.0",
