--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "deploy": "yarn run build && gh-pages -d dist"
   },
   "dependencies": {
+    "core-js": "^3.4.7",
     "formik": "^2.0.6",
+    "intl": "^1.2.5",
     "less": "^3.10.3",
     "overmind": "^20.0.0",
     "overmind-react": "^21.0.0",
